# testcase-agent

./: .gitignore  README.md  pyproject.toml
.docs/: plan.md
agent/: __main__.py  cli.py  config.py
agent/generators/: case_generator.py  code_generator.py
agent/generators/templates/: test_file.py.j2
agent/graph/: __init__.py  analyze_graph.py  edges.py  flow_graph.py  generate_graph.py  state.py
agent/graph/nodes/: __init__.py  analyze_code.py  deduplicate.py  design_flow.py  generate_cases.py  generate_code.py  generate_gap_cases.py  next_endpoint.py  output_flow.py  parse_input.py  parse_swagger.py  validate_cases.py
agent/llm/: client.py  prompts.py  tools.py
agent/models/: __init__.py  factory.py
agent/orchestrator/: dependency_resolver.py  flow_builder.py
agent/parsers/: base.py  code_analyzer.py  markdown_parser.py  swagger_parser.py  text_parser.py  word_parser.py
agent/prompts/: __init__.py  extraction.py  flow_design.py  gap_analysis.py  generation.py
agent/quality/: deduplicator.py  validator.py
agent/runner/: executor.py  reporter.py
agent/schemas/: api_schema.py  flow.py  llm_output.py  test_case.py
config/: settings.yaml
