[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "testcase-agent"
version = "0.1.0"
description = "AI Agent for API test case generation"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-docx>=1.0",
    "jinja2>=3.1",
    "click>=8.1",
    "requests>=2.31",
]

[project.scripts]
testcase-agent = "agent.cli:cli"

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.setuptools.package-data]
agent = ["generators/templates/*.j2"]
